name:               space-sim
version:            0.0.1
license:            BSD3
license-file:       LICENSE
author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ> <dibblego>
maintainer:         Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ> <dibblego>
copyright:          Copyright (C) 2015 NICTA Limited
synopsis:           Space simulator
category:           Data
description:        
  <<http://i.imgur.com/Ns5hntl.jpg>>
  .
  Space Simulator

homepage:           https://github.com/tonymorris/space-sim
bug-reports:        https://github.com/tonymorris/space-sim/issues
cabal-version:      >= 1.10
build-type:         Custom
extra-source-files: changelog

source-repository   head
  type:             git
  location:         git@github.com:tonymorris/space-sim.git

flag                small_base
  description:      Choose the new, split-up base package.

executable game
  default-language:
                    Haskell2010

  build-depends:
                      base          >= 4   && < 5
                    , space-sim

  hs-source-dirs:
                    src

  main-is:
                    Main.hs

  ghc-options:
                    -Wall -O2

  default-extensions:
                    NoImplicitPrelude

library
  default-language:
                    Haskell2010

  build-depends:
                      base          >= 4   && < 5
                    , semigroups    >= 0.8
                    , semigroupoids >= 4.0
                    , bifunctors    >= 3.0
                    , lens          >= 4.0 && < 5
                    , aeson
                    , zeromq4-haskell
                    , bytestring
                    , syb
                    , filepath
                    , vector
                    , raw-strings-qq >= 1

  ghc-options:
                    -Wall

  default-extensions:
                    NoImplicitPrelude

  hs-source-dirs:
                    lib

  exposed-modules:
                      Spacerace.Main
                    , Spacerace.Lobby
                    , Spacerace.Control
                    , Spacerace.State
                    , Spacerace.Map

test-suite doctests
  type:
                    exitcode-stdio-1.0

  main-is:
                    doctests.hs

  default-language:
                    Haskell2010

  build-depends:
                      base < 5 && >= 3
                    , doctest >= 0.9.7
                    , filepath >= 1.3
                    , directory >= 1.1
                    , QuickCheck >= 2.0
                    , template-haskell >= 2.8

  ghc-options:
                    -Wall
                    -threaded

  hs-source-dirs:
                    test
